--- a/_includes/gitalk.html
+++ b/_includes/gitalk.html
@@ -3,10 +3,10 @@
     <div id="gitalk-container"></div>
     <script>
         const gitalk = new Gitalk({
-          clientID: "{{ 8ba7e091781281d9bc1f }}",
-          clientSecret: "{{ a6b9328eb2abce9a74841d198bee7cc1a69d92fe }}",
-          repo: "{{ motukii.github.io }}",
-          owner: "{{ motukii }}",
+          clientID: "{{ site.gitalk.clientID }}",
+          clientSecret: "{{ site.gitalk.clientSecret }}",
+          repo: "{{ site.gitalk.repo }}",
+          owner: "{{ site.gitalk.owner }}",
           admin: ["{{ site.gitalk.owner }}"],
           id: window.location.pathname,      // Ensure uniqueness and length less than 50
           distractionFreeMode: false,  // Facebook-like distraction free mode
